# 001-Gestor-de-inventario

./: CMakeLists.txt  main.cpp
data/: products.csv
include/: Inventory.h  Product.h
src/: Inventory.cpp  Product.cpp
